--- a/main/resources/templates/index.html
+++ b/main/resources/templates/index.html
@@ -3,13 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Bitcoin Arbitrage</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="../static/main.css" />
 </head>
 <body>
 
     <div id="react"></div>
 
-    <script src="built/bundle.js"></script>
+    <script src="/src/main/resources/static/built/bundle.js"></script>
 
 </body>
 </html>
